# tccon-qc-email

./: .gitignore  README.md  get_site_reviewers.py  pyproject.toml  requirements.txt  setup.py
carbackend/: metadata_config.json  update_doi_json.py
carbackend/carbackend/: asgi.py  settings.py  urls.py  wsgi.py
carbackend/global_static/css/: opstat.css
carbackend/global_static/js/: bibtex.js  formset.js
carbackend/opstat/: admin.py  apps.py  models.py  urls.py  views.py
carbackend/opstat/migrations/: 0001_initial.py  0002_sitestatushistory.py  0003_auto_20200908_2301.py  0004_remove_sitestatushistory_sitename.py  0005_auto_20201014_1813.py  0006_auto_20201014_1840.py  0007_auto_20210715_0618.py  0008_alter_sitestatus_options.py  0009_auto_20220407_2040.py
carbackend/qcform/: apps.py  forms.py  models.py  urls.py  views.py
carbackend/qcform/migrations/: 0001_initial.py  0002_auto_20220125_0740.py  0003_auto_20220126_0610.py  0004_auto_20220128_0517.py  0005_qcreport_modification_time.py  0006_auto_20220128_0536.py  0007_auto_20220217_0600.py  0008_draftqcreport_modification_time.py  0009_draftqcreport_report.py  0010_auto_20220624_0032.py  0011_auto_20220624_0053.py
carbackend/siteinfo/: citations.py  forms.py  models.py  ror_id_list.txt  urls.py  utils.py  views.py
carbackend/siteinfo/migrations/: 0001_initial.py  0002_auto_20210810_2308.py  0005_auto_20210811_0013.py  (+5 more)
carbackend/tcconauth/: apps.py  utils.py
qc_email/: __init__.py  __main__.py  qc_email.py
scripts/: add_short_location_20220910.py  gen_init_bibtex_20220928.py  grid_to_ror_20220917.py
(+26 files in other folders)
