[build-system]
requires = ["setuptools >= 75.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tccon_qc_email"
authors = [
	{ name = "Joshua Laughner", email = "josh.laughner@jpl.nasa.gov" },
    { name = "Sebastien Roche", email = "sebastien.roche@mail.utoronto.ca" }
]
maintainers = [
	{ name = "Joshua Laughner", email = "josh.laughner@jpl.nasa.gov" }
]
description = "Email QA/QC plots of TCCON data to GGGBugs"
readme = "README.md"
classifiers=[
	"Operating System :: OS Independent",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3.7",
]
dependencies = [
    "tomli>=1.0.4,<2.0.0",
    "requests",
]
requires-python = ">= 3.7"
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/TCCON/tccon-qc-email"

[tool.setuptools.dynamic]
version = { attr = "qc_email.version.__version__" }
